--- a/front1.html
+++ b/front1.html
@@ -36,6 +36,7 @@
         <div class="project-content">
           <h3>Basic Site on Vladimir Zhirinovsky</h3>
           <p>A simple website dedicated to Vladimir Zhirinovsky, outlining his career and public persona.</p>
+          <a href="#">View Project</a>
         </div>
       </div>
       <div class="project-card">
@@ -43,6 +44,7 @@
         <div class="project-content">
           <h3>Intellectual Games Hub</h3>
           <p>A website about mine interests - Hosting intellectual games</p>
+          <a href="#">View Project</a>
         </div>
       </div>
       <div class="project-card">
@@ -50,6 +52,7 @@
         <div class="project-content">
           <h3>Online Banking Platform</h3>
           <p>An online banking site with a modern interface and secure transaction capabilities.</p>
+          <a href="#">View Project</a>
         </div>
       </div>
     </div>
